<resources>
    <string name="app_name">MeGoHike</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment_hiking_list">MeGoHike</string>
    <string name="fragment_new_hiking">New hiking activity</string>
    <string name="fragment_new_observation">New Observation</string>
    <string name="fragment_new_Equipment">New Equipment</string>
    <string name="fragment_confirm">Confirm</string>
    <string name="fragment_advance_search">Advance Search</string>
    <string name="add_new">Add New</string>
    <!-- message -->
    <string name="no_hiking_data">Unfortunately, there is no available data on hiking activities at this time.</string>
    <string name="hiking_data_empty_icon">Hiking data empty icon</string>
    <string name="name_of_hike">Name of Hike</string>
    <string name="name_of_hike_edit">Name of Hike *</string>
    <string name="length_of_hike">Length of Hike</string>
    <string name="length_of_hike_edit">Length of Hike *</string>
    <string name="level_of_difficulty">Level of Difficulty</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start_date">Start Date (DD\/MM\/YYYY) *</string>
    <string name="start_date_not_require">Start Date (DD\/MM\/YYYY)</string>
    <string name="date">Date (DD\/MM\/YYYY)</string>
    <string name="time">Time (HH:MM AM-PM)</string>
    <string name="period">AM/PM</string>
    <string name="comment">Comment</string>
    <string name="expected_date">Expected Date (DD\/MM\/YYYY) *</string>
    <string name="parking_available">Parking Available</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="provide_name_of_hike">Please provide a name of Hike</string>
    <string name="provide_observation">Please provide a name of Observation</string>
    <string name="provide_equipment">Please provide a name of equipment or gear</string>
    <string name="provide_count">Please provide a count of equipment</string>
    <string name="provide_length_of_hike">Please provide a length of Hike</string>
    <string name="enter_valid_date_format">Please enter a valid date format (DD/MM/YYYY)</string>
    <string name="enter_valid_time_format">Please enter a valid time format (HH:MM AM-PM)</string>
    <string name="information_detail">Information Detail</string>
    <string name="start_date_detail">Start date</string>
    <string name="date_detail">Date</string>
    <string name="time_detail">Time</string>
    <string name="expected_end_date_detail">Expected end date</string>
    <string name="observations">Observations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="observation">Observation *</string>
    <string name="equipments_and_gears">Equipments and Gears</string>
    <string name="add_new_equipment_and_gear">Add New Equipment and Gear</string>
    <string name="equipment_and_gear">Equipment and Gear</string>
    <string name="equipment">Equipment</string>
    <string name="count">Count</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search">search...</string>
</resources>